fixed sidebar img size to prevent gapping at bottom

--- a/css/main.css
+++ b/css/main.css
@@ -2468,7 +2468,7 @@
 		background-image: url("images/overlay.png"), url("../images/marchantia.jpg");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
-		background-size: auto,								auto 100%;
+		background-size: auto,								auto 120%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
@@ -2931,7 +2931,7 @@
 			#footer {
 				background-attachment: scroll;
 				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../images/bg.jpg");
+				background-image: url("images/overlay.png"), url("../images/marchantia.jpg");
 				background-position: top left,						bottom center;
 				background-repeat: repeat,							no-repeat;
 				background-size: auto,							cover;
